# new_blog

./: .env.example  .gitignore  DEPLOY.md  README.md  SPEC.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_comments.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  comment.py  user.py
backend/app/routers/: __init__.py  articles.py  auth.py  comments.py
backend/app/schemas/: comment.py  user.py
backend/app/utils/: security.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/content/articles/: Android手机连接wifi不调用系统浏览器的方法.md  Cloudflare故障和给我们带来的启示.md  C盘文件清理指南.md  Firefox主页背景图片的添加.md  Hexoの千层套路.md  Homelab搭建.md  Markdown基本语法.md  OpenClaw.md  Picgo教程.md  Piracy.md  mpv的使用.md  scoop-windows的应用商店.md  vimium常用快捷键.md  一些想法.md  从零开始构建一个量化交易系统.md  低碳饮食找回健康.md  使用Rclone多端备份文件.md  使用Zensical管理你的Docs.md  做题家.md  关于UBI的一切.md  加密货币洗钱手法.md  化竞。.md  大学怎么读.md  如何打商赛.md  学生薅羊毛指南.md  学车.md  实战：MAX30102心率血氧计.md  实战：NFC一卡通.md  实战：心电图信号处理.md  将Powershell 7作为你的默认shell.md  志愿填报教程.md  我的串流方案.md  我的初中.md  我的小学.md  我的高中.md  搜索教程.md  文字资料电子化.md  杂项.md  疫情这三年.md  美化你的Terminal和Shell-v2-0.md  (+10 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AboutContent.tsx  ArticleList.tsx  ArticleNav.tsx  Footer.tsx  GlassCard.tsx  MouseGlow.tsx  Navbar.tsx  ParallaxBg.tsx  ReadingProgress.tsx  ScholarAcademicContent.tsx  ScholarContent.tsx  SiteFrame.tsx  SitesContent.tsx  SocialContent.tsx  StarDust.tsx
(+11 files in other folders)
