[project]
name = "backend"
version = "0.1.0"
description = "Backend API for the personal blog"
readme = "README.md"
authors = [
    { name = "cyhkbl", email = "cyhkbl@hotmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
